# mmosa-app

./: README.md  modules.txt  pyproject.toml
docs/: mmos_aruba_app.md
mmos_aruba/: __init__.py  desktop.py  hooks.py  install.py
mmos_aruba/api/: sync.py
mmos_aruba/doctype/mmos_aruba_account/: mmos_aruba_account.json
mmos_aruba/doctype/mmos_aruba_node/: mmos_aruba_node.json
mmos_aruba/doctype/mmos_aruba_setup/: mmos_aruba_setup.json  mmos_aruba_setup.py
mmos_aruba/page/mmos-aruba-setup/: mmos-aruba-setup.css  mmos-aruba-setup.js
